# vidmesh

./: .gitignore  CHANGELOG.md  Cargo.toml  DECISIONS.md  EVERMESH_BUILD_PLAN.md  EVERMESH_SPEC_PROPOSAL.md  LICENSE-MIT  LICENSE-SPEC  README.md  SECURITY.md  VIDMESH_BUILD_PLAN.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/evermesh-kernel/fuzz/: .gitignore  Cargo.toml
crates/evermesh-kernel/fuzz/fuzz_targets/: bundle_import.rs  decode_canonical.rs  json_from.rs  record_from_cbor.rs
crates/evermesh-node/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/evermesh-node/src/: main.rs  pinning.rs
crates/evermesh-node/ui/: index.html  style.css
crates/evermesh-relay/: Cargo.toml  Dockerfile  README.md
crates/evermesh-relay/src/: blobs.rs  config.rs  filter.rs  frames.rs  gossip.rs  info.rs  lib.rs  main.rs  store.rs  sync.rs
crates/vidmesh-kernel/: Cargo.toml  README.md
crates/vidmesh-kernel/src/: codec.rs  dmtap_pub.rs  identity.rs  lib.rs  record.rs
crates/vidmesh-kernel/src/kinds/: mod.rs  trust.rs
crates/vidmesh-kernel/tests/: dmtap_pub_vectors.rs
crates/vidmesh-kernel/tests/vectors/: dmtap_pub_vectors.json
crates/vidmesh-node/: Cargo.toml  README.md  tauri.conf.json
crates/vidmesh-node/src/: main.rs  pinning.rs
crates/vidmesh-node/ui/: index.html  style.css
crates/vidmesh-wasm/: Cargo.toml  README.md
crates/vidmesh-wasm/src/: lib.rs
tools/conformance/: Cargo.toml  README.md  node-harness.mjs
tools/conformance/src/: kernel_target.rs  lib.rs  main.rs  node_target.rs  relay_target.rs  vectors.rs
tools/conformance/vectors/bundle/: bad-magic.json  corrupted-blob-item.json
tools/conformance/vectors/chunktree/: empty-blob-any-index-invalid.json  invalid-wrong-index.json  invalid-wrong-sibling.json  valid-1-chunks-index-0.json  valid-2-chunks-index-0.json  valid-2-chunks-index-1.json  valid-3-chunks-index-0.json  valid-3-chunks-index-1.json  valid-3-chunks-index-2.json  valid-5-chunks-index-0.json  valid-5-chunks-index-1.json  valid-5-chunks-index-2.json  valid-5-chunks-index-3.json  valid-5-chunks-index-4.json
tools/conformance/vectors/envelope/: bad-sig.json  float-in-body.json  non-canonical.json  truncated.json  unknown-envelope-key.json  unknown-sig-alg.json  valid-comment.json
tools/conformance/vectors/identity/: chain-order-merge-1.json  chain-order-merge-2.json  chain-order-merge-3.json  fork-final-signing.json  fork-recovery-precedence.json  fork-same-class-tiebreak.json  genesis-invalid-key-mismatch.json  genesis-invalid-nonzero-id.json  genesis-valid.json  rotate-alg-field-present.json  rotate-recovery.json  rotate-signing.json
tools/conformance/vectors/json/: duplicate-object-key.json  exponent-notation.json  float-value.json  hex-prefix-escape.json  integer-lookalike-text-key.json  leading-zero-number.json  negative-integer-key.json  record-shaped-integer-keys-and-bytes.json  txt-prefix-escape.json
tools/conformance/vectors/kinds/anchor/: bad-sig.json  envelope-tamper.json  non-canonical.json  nonempty-refs.json  valid-basic.json
tools/conformance/vectors/kinds/attest/: bad-sig.json  envelope-tamper.json  non-canonical.json  valid-basic.json  wrong-refs-count.json
tools/conformance/vectors/kinds/channel/: bad-sig.json  envelope-tamper.json  non-canonical.json  nonempty-refs.json  valid-basic.json
tools/conformance/vectors/kinds/claim.author/: bad-sig.json  envelope-tamper.json  non-canonical.json  valid-basic.json  wrong-refs-count.json
tools/conformance/vectors/kinds/claim.dispute/: bad-sig.json  envelope-tamper.json  missing-statement.json  non-canonical.json  valid-basic.json
tools/conformance/vectors/kinds/claim.license/: bad-sig.json  envelope-tamper.json  missing-license.json  non-canonical.json  valid-basic.json
tools/conformance/vectors/kinds/claim.transfer/: bad-sig.json  envelope-tamper.json  missing-assignee.json  non-canonical.json  valid-basic.json
tools/conformance/vectors/kinds/comment/: bad-sig.json  empty-text.json  envelope-tamper.json  non-canonical.json  valid-basic.json
tools/conformance/vectors/kinds/delegate/: bad-sig.json  envelope-tamper.json  non-canonical.json  ref-without-revoked-flag.json  revoked-without-ref.json  valid-basic.json
tools/conformance/vectors/kinds/endorse.gateway/: bad-sig.json  envelope-tamper.json  non-canonical.json  non-https-url.json  nonempty-refs.json  valid-basic.json
tools/conformance/vectors/kinds/feed.takedown/: bad-sig.json  envelope-tamper.json  non-canonical.json  nonempty-refs.json  valid-basic.json
tools/conformance/vectors/kinds/follow/: bad-sig.json  envelope-tamper.json  non-canonical.json  valid-basic.json
tools/conformance/vectors/kinds/keygrant/: bad-sig.json  envelope-tamper.json  missing-wrapped-key.json  non-canonical.json  valid-basic.json
tools/conformance/vectors/kinds/live.chat/: bad-sig.json  envelope-tamper.json  missing-text.json  non-canonical.json  text-too-long.json  valid-basic.json
tools/conformance/vectors/kinds/live.manifest/: bad-sig.json  envelope-tamper.json  later-record-empty-refs.json  non-canonical.json  valid-basic.json
tools/conformance/vectors/kinds/manifest/: bad-derivation-sig.json  bad-sig.json  envelope-tamper.json  missing-chunk-root-over-1mib.json  missing-title.json  non-canonical.json  too-many-refs.json  valid-basic.json
tools/conformance/vectors/kinds/mirror/: bad-sig.json  empty-refs.json  envelope-tamper.json  non-canonical.json  valid-basic.json
tools/conformance/vectors/kinds/notice.counter/: bad-sig.json  envelope-tamper.json  non-canonical.json  valid-basic.json  wrong-refs-count.json
tools/conformance/vectors/kinds/notice.takedown/: bad-sig.json  empty-refs.json  envelope-tamper.json  missing-claimant.json  non-canonical.json  valid-basic.json
tools/conformance/vectors/kinds/playlist/: bad-sig.json  empty-entries.json  envelope-tamper.json  non-canonical.json  nonempty-refs.json  valid-basic.json
tools/conformance/vectors/kinds/profile/: bad-sig.json  envelope-tamper.json  non-canonical.json  nonempty-refs.json  valid-basic.json
(+189 files in other folders)
