[workspace]
resolver = "2"
members = [
    "crates/evermesh-kernel",
    "crates/evermesh-relay",
    "crates/evermesh-wasm",
    "crates/evermesh-node",
    "tools/conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vul-os/evermesh"
authors = ["Evermesh contributors"]

[workspace.dependencies]
evermesh-kernel = { path = "crates/evermesh-kernel" }

[profile.release]
lto = true
codegen-units = 1
