[package]
name = "evermesh-node"
version = "0.0.1"
description = "Evermesh node app (Tauri 2 scaffold) — pins and seeds chosen content"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evermesh-kernel = { workspace = true }
