[package]
name = "evermesh-relay"
version = "0.0.1"
description = "Evermesh relay: websocket sync, optional blob sidecar, gossip"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
evermesh-kernel = { workspace = true }

tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "io-util", "time", "sync"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

rusqlite = { version = "0.31", features = ["bundled"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

blake3 = { version = "1.5", default-features = false }

tempfile = "3.10"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["test-util"] }
