[package]
name = "vidmesh-kernel"
version = "0.0.1"
description = "The Vidmesh protocol kernel: records, identity, blobs, bundles"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
blake3 = "1.5"
ed25519-dalek = "2.1"
getrandom = "0.2"

# DMTAP-PUB §22 substrate, CONSUMED (not reimplemented) from envoir's reference
# crate. See docs/DMTAP-CONVERGENCE.md: a second divergent implementation of §22
# would defeat the point of converging, so this is a real dependency pinned to a
# reviewed revision. Optional and default-off — the native vidmesh format and the
# WASM build are untouched unless `--features dmtap-pub` is passed.
dmtap-core = { git = "https://github.com/vul-os/envoir", rev = "12526123cb37e459df5717c2ce243bbecbf5ac23", optional = true }

[features]
default = []
# Additive §22 encode/decode path alongside the native vidmesh format (phase 1).
# Enabling this changes NO existing byte format; it only adds `kernel::dmtap_pub`.
dmtap-pub = ["dep:dmtap-core"]

[dev-dependencies]
proptest = "1.5"
hex = "0.4"
serde_json = "1.0"
