[package]
name = "vidmesh-wasm"
version = "0.0.1"
description = "wasm-bindgen bindings over vidmesh-kernel for browsers and Node"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vidmesh-kernel = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
# Route OS randomness through the JS host on wasm targets.
getrandom = { version = "0.2", features = ["js"] }
