[package]
name = "evermesh-conformance"
version = "0.0.1"
description = "Evermesh conformance suite: test vectors + cross-runtime runner"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
evermesh-kernel = { path = "../../crates/evermesh-kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# node target: spawns `node node-harness.mjs` as a child process and
# speaks newline-delimited JSON over its stdio (src/node_target.rs).
# No async runtime needed there — std::process::Command is enough.

# relay target: a live websocket client against a running evermesh-relay
# (spec 006). Kept compiling at all times; the relay need not be
# running unless `--target relay` is actually invoked.
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
tokio-tungstenite = "0.23"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[[bin]]
name = "evermesh-conformance"
path = "src/main.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"
