[package]
name = "evermesh-kernel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Detach from the root workspace: cargo-fuzz builds this crate as its own
# workspace root so its unstable, nightly-only dependency graph never
# leaks into `cargo build`/`cargo test` for the rest of the monorepo.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.evermesh-kernel]
path = ".."

[[bin]]
name = "decode_canonical"
path = "fuzz_targets/decode_canonical.rs"
test = false
doc = false

[[bin]]
name = "record_from_cbor"
path = "fuzz_targets/record_from_cbor.rs"
test = false
doc = false

[[bin]]
name = "bundle_import"
path = "fuzz_targets/bundle_import.rs"
test = false
doc = false

[[bin]]
name = "json_from"
path = "fuzz_targets/json_from.rs"
test = false
doc = false
